added type arguments to constructor and method call